Fixed messages to match comps. Prevent word overflow by truncating file upload name.

--- a/app/assets/stylesheets/messages.sass
+++ b/app/assets/stylesheets/messages.sass
@@ -1,5 +1,4 @@
 .messages_list_container
-  width: 800px
   margin: 0 auto
   
 .messages_landing_wrapper
@@ -33,6 +32,8 @@
           border: 0 none
     .file_upload_name
       margin-left: 10px
+      overflow: hidden
+      float: left
 
 #message_new
   textarea
